chore: working on the homepage

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>STUMP AND GRIND | Home</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <link href="https://fonts.googleapis.com/css?family=Rubik:400,700" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -26,14 +26,18 @@
         <span class="hamburgerBtn__bar"></span>
       </div><!-- end hamburgerBtn -->
       <nav class="header__nav">
-        <a class="header__nav__item">About</a>
+        <a href="#" class="header__nav__item">About</a>
       </nav>
     </div><!-- end header__main -->
   </header>
   <main>
     <div class="hero">
       <div class="hero__content">
-        <span class="hero__text">Get a fast and free estimate of your stump removal job</span>
+        <div class="hero__text">
+          <span>Get a fast and free</span>
+          <span>estimate of your</span>
+          <span>stump removal job</span>
+        </div><!-- end hero__text -->
         <a class="btn">Get free estimate</a>
       </div><!-- end hero__content -->
     </div><!-- end hero -->
@@ -54,17 +58,15 @@
             <p><strong>Quality</strong> - We use the best compact grinder on the market, a 35hp Rayco Tracked Stump Grinder with push blade. At 900mm wide, it can fit through most garden gates yet is large enough to easily remove stumps both large and small.</p>
           </div><!-- end colGrid__item -->
         </div><!-- end colGrid -->
-        <div class="beforeAfter">
+        <div class="beforeAfter u-mb0">
           <div class="beforeAfter__box beforeAfter__box--before">
-            <div class="beforeAfter__label">Before</div>
+            <span class="beforeAfter__label">Before</span>
             <div class="beforeAfter__content">
               Stumps can be trip hazards, make lawn mowing a slow and awkward process, and look unsightly.
             </div><!-- end beforeAfter__content -->
           </div><!-- end beforeAfter__box -->
-        </div><!-- end beforeAfter -->
-        <div class="beforeAfter">
           <div class="beforeAfter__box beforeAfter__box--after">
-            <div class="beforeAfter__label">After</div>
+            <span class="beforeAfter__label">After</span>
             <div class="beforeAfter__content">
               The stump area is left smooth and raked flat, ready for the grass to return.
             </div><!-- end beforeAfter__content -->
